# FileBat

./: .fallowignore  .fallowrc.json  .gitignore  CLAUDE.md  SESSIONS.md  architecture.md  clint_test.md  context_manager.sh  coverage-chart.html  coverage-progress.md  e2e-projects-scan.cjs  fallow-chart.html  fallow-progress.md  fallow.toml  future_ideas.md  launch-dev.cmd  package-lock.json  package.json  playwright.tauri.cjs  sdlc.md  tsconfig.json  vite.config.ts  vitest.config.ts  xxxx.md
sessions/: .resume-prompt.md  2026-07-03 -- fallow-health-sweep-refactoring-tauri-ipc-standardisation.md  2026-07-04 -- disk-usage-tree-two-phase-parallel-scan.md  2026-07-04 -- fallow-oom-fix-test-dedup-e2e-refactor-chart-overhaul.md  2026-07-05 -- bfs-streaming-scan-full-tree-drilldown.md  2026-07-05 -- event-batching-visible-observability.md  2026-07-05 -- incremental-structure-emission-streaming-tree.md  2026-07-05 -- memory-optimization-single-tree-store.md  2026-07-05 -- o-n-freeze-fix-observability.md  SESSION-CURRENT.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/commands/: fileops.rs  mod.rs  navigation.rs  scan.rs
src-tauri/src/domain/: mock.rs  mod.rs  models.rs  repos.rs
src-tauri/src/infrastructure/: analytics_db.rs  filesystem.rs  mod.rs
src-tauri/src/usecases/: file_operations.rs  mod.rs  navigation.rs
src-tauri/src/usecases/analytics/: aggregator.rs  arena.rs  disk_usage.rs  disk_usage_ignore.rs  duplicates.rs  large_files.rs  mod.rs  snapshot.rs
src-tauri/tests/: integration.rs
(+16 files in other folders)
