[package]
name = "filebitch"
version = "0.1.0"
edition = "2021"
description = "Fast file explorer with disk analytics"

[dependencies]
tauri = { version = "2", features = [] }
jwalk = "0.8"
walkdir = "2.5"
notify = "6.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
crossbeam = "0.8"
num_cpus = "1.16"
dirs = "5.0"
ignore = "0.4"

[features]
default = []

[dev-dependencies]
tempfile = "3.0"
walkdir = "2.5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
